--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -12,27 +12,13 @@
     <h1 class="h3 mb-3 font-weight-normal">Please sign in for link
         <a href="{{ target_path }}">{{ target_path }}</a>
     </h1>
-{#    <label for="inputUuid">Uuid</label>#}
-{#    <input type="text" value="{{ last_username }}" name="uuid" id="inputUuid" class="form-control" required autofocus>#}
     <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" required>
+    <input type="password" name="password" id="inputPassword" class="form-control mb-1" required>
 
     <input type="hidden" name="_csrf_token"
            value="{{ csrf_token('authenticate') }}"
     >
-
-    {#
-        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-        See https://symfony.com/doc/current/security/remember_me.html
-
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" name="_remember_me"> Remember me
-            </label>
-        </div>
-    #}
-
-    <button class="btn btn-lg btn-primary" type="submit">
+    <button class="btn btn-lg btn-outline-dark" type="submit">
         Sign in
     </button>
 </form>
