--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,23 +3,25 @@
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
-<form method="post">
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+    <div class="container" style="border:1px solid #cecece; width: 80%;">
+        <form method="post">
+            {% if error %}
+                <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+            {% endif %}
 
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in for link
-        <a href="{{ target_path }}">{{ target_path }}</a>
-    </h1>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control mb-1" required>
+            <h1 class="h3 mb-3 font-weight-normal">Please sign in for link
+                <a href="{{ target_path }}">{{ target_path }}</a>
+            </h1>
+            <label for="inputPassword">Password</label>
+            <input type="password" name="password" id="inputPassword" class="form-control mb-1" required>
 
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
-    <button class="btn btn-lg btn-outline-dark" type="submit">
-        Sign in
-    </button>
-</form>
+            <input type="hidden" name="_csrf_token"
+                   value="{{ csrf_token('authenticate') }}"
+            >
+            <button class="btn btn-lg btn-outline-dark" type="submit">
+                Sign in
+            </button>
+        </form>
+</div>
 {% endblock %}
