--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -6,6 +6,7 @@
         <p class="lead">You can convert text to an image to prevent its reading by any text algorithms</p>
         <hr class="my-4">
         <p>We don't save your data as text, so you may not to be afraid of insecurity</p>
+        <p>Algorithm deletes all extra whitespaces and ends of lines</p>
         <p class="lead">
             <a class="btn btn-outline-dark btn-lg" href="{{ path('app_main') }}" role="button">Generator</a>
         </p>
